--- a/StonePaperScissor/app/src/main/AndroidManifest.xml
+++ b/StonePaperScissor/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.StonePaperScissor"
         tools:targetApi="31">
         <activity
+            android:name=".FinishActivity"
+            android:exported="false" />
+        <activity
             android:name=".PlayWithOtherActivity"
             android:exported="false" />
         <activity
