--- a/StonePaperScissor/app/src/main/AndroidManifest.xml
+++ b/StonePaperScissor/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.StonePaperScissor"
         tools:targetApi="31">
         <activity
+            android:name=".FinishComputerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PlayWithComputerActivity"
+            android:exported="false" />
+        <activity
             android:name=".FinishActivity"
             android:exported="false" />
         <activity
